-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 3.4.0-beta1
-
cdb369931e8f499b8029f133f1f89206d0b17fae
- Open $QT_INSTALLATION_DIR/Examples/Qt-5.4/declarative/demos/minehunt/minehunt.pro
- Run QML Profiler
- Generate some events in the application.
- Stop QML Profiler
Since the V8 tab is preselected and the widgets there are all disabled, you get the impression that nothing happened (tab Timline and Events are updated).