QmlProfiler: Show timeline view by default

When starting the QML profiler for the first time there is no saved
state and the V8 view was shown by default because of the way the
dock widgets are created. This is not very useful.

Change-Id: I5f8873405b3ebc0683ce8d578466631499932c08
Task-number: QTCREATORBUG-14060
Reviewed-by: Joerg Bornemann <joerg.bornemann@theqtcompany.com>